Alignment fix attempt 6

--- a/app/style.css
+++ b/app/style.css
@@ -22,7 +22,6 @@ body {
 }
 
 html, body {
-    height: 100%;
     overflow: hidden;
 }
 
@@ -37,7 +36,6 @@ main {
     grid-template-columns: 1fr;
     align-items: center;
     gap: 30px;
-    flex-grow: 1;
 }
 
 
@@ -259,8 +257,6 @@ img:hover {
     animation: flicker 0.2s infinite;
     font-size: 1rem;
     font-size: clamp(1rem, 1.3968992248062015rem + -0.41343669250646vw, 1.3rem);
-    left: 0;
-    /* Align to the left edge */
     margin-top: auto
 }
 
@@ -269,7 +265,7 @@ img:hover {
     main {
         max-width: 600px;
         max-height: 700px;
-        gap: 10px;
+        gap: 15px;
     }
 
     .title {
